Account for `!---` doc splitter for properties validation